--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ids-enterprise",
   "slug": "ids-enterprise",
-  "version": "4.18.0",
+  "version": "4.18.1",
   "description": "Infor Design System (IDS) Enterprise Components for the web",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/infor-design/enterprise.git"
+    "url": "git+https://github.com/guoliang/enterprise.git"
   },
   "keywords": [
     "infor design system",
@@ -14,9 +14,9 @@
   "author": "Hook & Loop",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/infor-design/enterprise/issues"
+    "url": "https://github.com/guoliang/enterprise/issues"
   },
-  "homepage": "https://github.com/infor-design/enterprise",
+  "homepage": "https://github.com/guoliang/enterprise",
   "main": "dist/js/sohoxi.js",
   "jspm": {
     "main": "dist/js/sohoxi.js"
