--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ab-ids-enterprise",
   "slug": "ab-ids-enterprise",
-  "version": "4.19.6",
+  "version": "4.19.7-beta.0",
   "description": "Infor Design System (IDS) Enterprise Components for the web",
   "repository": {
     "type": "git",
